--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@
     margin-top: 35px;
     font-size: 14px;
     color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   }
 
   .bottom-container a:hover {
